--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body{
     left: 0;
     width: 100%;
     height: 40px;
-    background-image: url(/vendor/images/background_0.png);
+    background-image: url(images/background_0.png);
     display: flex;
     align-items: center;
 }
@@ -36,7 +36,7 @@ body{
 }
 
 .wrapper{
-        background-image: url(/vendor/images/shutterstock17622570.png);
+        background-image: url(images/shutterstock17622570.png);
         left: -6px; 
         top: -10px; 
         position: absolute; 
